--- a/Product_Sales_Analysis.ipynb
+++ b/Product_Sales_Analysis.ipynb
@@ -666,7 +666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#FINDING ANSWERS WITH THE DATA WE HAVE"
+    "#INTERPRETATING WITH THE DATA WE HAVE"
    ]
   },
   {
